--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 name: CivicActions
 email: contact@civicactions.com
 description: Digital services that work for everyone.
-# baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "web-prototype" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 github_username: civicactions
